--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -1,6 +1,13 @@
 name: ValidationMain
 
-on: workflow_dispatch
+on:
+  schedule:
+    - cron:  '0 */6 * * *'
+  workflow_dispatch:
+
+concurrency: 
+  group: validation_workflow
+  cancel-in-progress: false
 
 jobs:
   PreValidation:
